# atrv_mini_pkg

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  README.md  README.md.orig  package.xml  package.xml.orig  test.pgm
include/: ATRVmini_config.h  ATRVmini_driver.h  rflex_driver.h  vicos_ATRVMini.cfg
launch/: 3dsensor.launch  3dsensor.launch.orig  amcl.launch  amcl_all.launch  amcl_all.launch.orig  asus.launch  atrv.launch  atrv.launch.orig  demo.pgm  gmapping.launch  gmapping_asus.launch  gmapping_mv.launch  gmapping_mv.launch.orig  gmapping_rviz.launch  joystick.launch  lab_map.launch  teleop.launch
launch/include/: 3dsensor2.launch  amcl_diff.launch  kinect_tf.launch  velocity_smoother.launch
launch/param/: 3dsensor.yaml  asus.yaml  smoother.yaml
maps/: avla_at.pgm  avla_at.yaml  avla_at2.pgm  avla_at2.yaml  avla_tb.pgm  avla_tb.yaml  fri_avla.pgm  fri_avla.yaml  fri_avla2.pgm  fri_avla2.yaml  hodnik.pgm  hodnik.yaml  lab1.pgm  lab2.pgm  lab_test.pgm  lab_test.yaml  lab_test1.pgm  lab_test1.yaml  mapica3.pgm  mapica3.yaml  mapica4.pgm  mapica4.yaml
nav/: base_local_planner_params.yaml  base_local_planner_params.yaml.orig  costmap_common_params.yaml  costmap_common_params.yaml.orig  global_costmap_params.yaml  global_costmap_params.yaml.orig  local_costmap_params.yaml
rviz/: gmapping.rviz  gmapping_mv.rviz  gmapping_mv.rviz.orig  gmapping_rviz.rviz  navigation.rviz
scripts/: atrv_mini_teleop_key  disable_break.sh  enable_break.sh  getNum.py  gitpull  myPlot.m  myPlot2.m  navigate
src/: ATRVmini_driver.cc  ATRVmini_footprint.cpp  ATRVmini_joy.cpp  ATRVmini_joy.cpp.orig  ATRVmini_node.cc  ATRVmini_sound.cc  rflex_driver.cc
