<?xml version="1.0"?>
<package>
  <name>atrv_mini_ros</name>
  <version>0.0.2</version>
  <description>The atrv_mini_ros package puts ROS on the iRobot ATRV Mini robot. </description>

  <maintainer email="luka.cehovin@fri.uni-lj.si">Luka Čehovin</maintainer>
  <maintainer email="jaka.cikac@gmail.com">Jaka Cikač</maintainer>
  <license>BSD</license>
  <url type="website">https://trac.vicos.si/ros</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>sound_play</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>sound_play</run_depend>

  <export>
  </export>
</package>
